tests/baselines/reference/overloadingOnConstants1(strict=true).errors.txt
overloadingOnConstants1.ts(16,25): error TS2454: Variable 'd2' is used before being assigned.
overloadingOnConstants1.ts(17,35): error TS2454: Variable 'd2' is used before being assigned.
overloadingOnConstants1.ts(18,32): error TS2454: Variable 'd2' is used before being assigned.
overloadingOnConstants1.ts(19,33): error TS2454: Variable 'd2' is used before being assigned.
overloadingOnConstants1.ts(22,5): error TS2741: Property 'bar' is missing in type 'Base' but required in type 'Derived1'.
overloadingOnConstants1.ts(22,30): error TS2454: Variable 'd2' is used before being assigned.
overloadingOnConstants1.ts(23,5): error TS2741: Property 'biz' is missing in type 'Derived1' but required in type 'Derived3'.
overloadingOnConstants1.ts(23,36): error TS2454: Variable 'd2' is used before being assigned.
overloadingOnConstants1.ts(24,5): error TS2741: Property 'bar' is missing in type 'Derived2' but required in type 'Derived1'.
overloadingOnConstants1.ts(24,33): error TS2454: Variable 'd2' is used before being assigned.
overloadingOnConstants1.ts(25,5): error TS2741: Property 'bar' is missing in type 'Derived3' but required in type 'Derived1'.
overloadingOnConstants1.ts(25,34): error TS2454: Variable 'd2' is used before being assigned.


==== overloadingOnConstants1.ts (12 errors) ====
    class Base { foo() { } }
    class Derived1 extends Base { bar() { } }
    class Derived2 extends Base { baz() { } }
    class Derived3 extends Base { biz() { } }
    
    interface Document2 {
        createElement(tagName: 'canvas'): Derived1;
        createElement(tagName: 'div'): Derived2;
        createElement(tagName: 'span'): Derived3;
        createElement(tagName: string): Base;
    }
    
    var d2: Document2;
    
    // these are ok
    var htmlElement: Base = d2.createElement("yo")
                            ~~
!!! error TS2454: Variable 'd2' is used before being assigned.
    var htmlCanvasElement: Derived1 = d2.createElement("canvas");
                                      ~~
!!! error TS2454: Variable 'd2' is used before being assigned.
    var htmlDivElement: Derived2 = d2.createElement("div");
                                   ~~
!!! error TS2454: Variable 'd2' is used before being assigned.
    var htmlSpanElement: Derived3 = d2.createElement("span");
                                    ~~
!!! error TS2454: Variable 'd2' is used before being assigned.
    
    // these are errors
    var htmlElement2: Derived1 = d2.createElement("yo")
        ~~~~~~~~~~~~
!!! error TS2741: Property 'bar' is missing in type 'Base' but required in type 'Derived1'.
!!! related TS2728 overloadingOnConstants1.ts:2:31: 'bar' is declared here.
                                 ~~
!!! error TS2454: Variable 'd2' is used before being assigned.
    var htmlCanvasElement2: Derived3 = d2.createElement("canvas");
        ~~~~~~~~~~~~~~~~~~
!!! error TS2741: Property 'biz' is missing in type 'Derived1' but required in type 'Derived3'.
!!! related TS2728 overloadingOnConstants1.ts:4:31: 'biz' is declared here.
                                       ~~
!!! error TS2454: Variable 'd2' is used before being assigned.
    var htmlDivElement2: Derived1 = d2.createElement("div");
        ~~~~~~~~~~~~~~~
!!! error TS2741: Property 'bar' is missing in type 'Derived2' but required in type 'Derived1'.
!!! related TS2728 overloadingOnConstants1.ts:2:31: 'bar' is declared here.
                                    ~~
!!! error TS2454: Variable 'd2' is used before being assigned.
    var htmlSpanElement2: Derived1 = d2.createElement("span");
        ~~~~~~~~~~~~~~~~
!!! error TS2741: Property 'bar' is missing in type 'Derived3' but required in type 'Derived1'.
!!! related TS2728 overloadingOnConstants1.ts:2:31: 'bar' is declared here.
                                     ~~
!!! error TS2454: Variable 'd2' is used before being assigned.